--- a/db/re/item_db_usable.yml
+++ b/db/re/item_db_usable.yml
@@ -2159,6 +2159,82 @@ Body:
     Weight: 1
     Script: |
       /*upgradeui 9551;*/
+  - Id: 10564
+    AegisName: Fire_Armor_S_Box30
+    Name: Fire Armor Scroll Box(30)
+    Type: Cash
+    Buy: 20
+    Weight: 10
+    Flags:
+      UniqueId: true
+    Trade:
+      Override: 100
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
+    Script: |
+      getitem 23374,30;
+  - Id: 10565
+    AegisName: Water_Armor_S_Box30
+    Name: Water Armor Scroll Box(30)
+    Type: Cash
+    Buy: 20
+    Weight: 10
+    Flags:
+      UniqueId: true
+    Trade:
+      Override: 100
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
+    Script: |
+      getitem 23375,30;
+  - Id: 10566
+    AegisName: Wind_Armor_S_Box30
+    Name: Wind Armor Scroll Box(30)
+    Type: Cash
+    Buy: 20
+    Weight: 10
+    Flags:
+      UniqueId: true
+    Trade:
+      Override: 100
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
+    Script: |
+      getitem 23376,30;
+  - Id: 10567
+    AegisName: Earth_Armor_S_Box30
+    Name: Earth Armor Scroll Box(30)
+    Type: Cash
+    Buy: 20
+    Weight: 10
+    Flags:
+      UniqueId: true
+    Trade:
+      Override: 100
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
+    Script: |
+      getitem 23377,30;
   - Id: 11500
     AegisName: Light_Yellow_Pot
     Name: Light Yellow Potion
@@ -3390,7 +3466,7 @@ Body:
       itemheal rand(50,70),rand(10,12);
   - Id: 11712
     AegisName: First_Leaf_Tea
-    Name: Flower
+    Name: First Leaf Tea
     Type: Healing
     Buy: 800
     Weight: 100
@@ -46465,6 +46541,70 @@ Body:
       NoAuction: true
     Script: |
       input .@megaphone$; announce strcharinfo(0) + ": " + .@megaphone$,bc_all,0xFF0000;
+  - Id: 23374
+    AegisName: Fire_Armor_S
+    Name: Fire Armor Scroll
+    Type: Usable
+    Weight: 10
+    Trade:
+      Override: 100
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
+    Script: |
+      specialeffect2 EF_BENEDICTIO; sc_start4 SC_ELEMENTALCHANGE,1800000,1,Ele_Fire,1,0;
+  - Id: 23375
+    AegisName: Water_Armor_S
+    Name: Water Armor Scroll
+    Type: Usable
+    Weight: 10
+    Trade:
+      Override: 100
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
+    Script: |
+      specialeffect2 EF_BENEDICTIO; sc_start4 SC_ELEMENTALCHANGE,1800000,1,Ele_Water,1,0;
+  - Id: 23376
+    AegisName: Wind_Armor_S
+    Name: Wind Armor Scroll
+    Type: Usable
+    Weight: 10
+    Trade:
+      Override: 100
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
+    Script: |
+      specialeffect2 EF_BENEDICTIO; sc_start4 SC_ELEMENTALCHANGE,1800000,1,Ele_Wind,1,0;
+  - Id: 23377
+    AegisName: Earth_Armor_S
+    Name: Earth Armor Scroll
+    Type: Usable
+    Weight: 10
+    Trade:
+      Override: 100
+      NoDrop: true
+      NoTrade: true
+      NoSell: true
+      NoCart: true
+      NoGuildStorage: true
+      NoMail: true
+      NoAuction: true
+    Script: |
+      specialeffect2 EF_BENEDICTIO; sc_start4 SC_ELEMENTALCHANGE,1800000,1,Ele_Earth,1,0;
   - Id: 23436
     AegisName: Shadow_Refine_Hammer
     Name: Shadow Refine Hammer
